--- a/views/index.html
+++ b/views/index.html
@@ -10,6 +10,20 @@
   
   <div class="container">
     <h1>File Upload</h1>
+    <%= typeof msg != 'undefined' ? msg : '' %>
+    <form action="/upload" method="post" enctype="multipart/form-data">
+      <div class="file-field input-field">
+        <div class="btn grey">
+          <span>File</span>
+          <input type="file" name="myFile" id="file">
+        </div>
+        <div class="file-path-wrapper">
+          <input type="text" class="file-path validate">
+        </div>
+      </div>
+      <button type="submit" class="btn green">Upload</button>
+    </form>
+    <img src="<%= typeof file != 'undefined' ? file : '' %>" class="responsive-img">
   </div>
 
   <script
